# tummscthesis

./: README.md  Symbol.py  intensity_data.txt  pyproject.toml  requirements.txt  simulation.ipynb
.ipynb_checkpoints/: aslov-checkpoint.txt  simulation-checkpoint.ipynb
Management/: Names_contacts.txt  topics_and_terms.txt
Supplementing_data/: maglov_seq.txt
configs/.ipynb_checkpoints/: default-checkpoint.yaml
hardware/: AB90H-Step.step.SLDPRT  AP90_M-Step.step.SLDPRT  Mirror holder.sldprt  Obj_30mm.sldprt  Objective.sldprt  Стол.SLDPRT
hardware/anti-moisture/: Engine.SLDPRT  cup1.SLDPRT  cup2.SLDPRT  engine bottom.SLDPRT  engine cup.SLDPRT  filter holder.SLDPRT
legacy/: Best_version_Camera_legacy.ipynb  Enhancer.py  Grid_measurer.py  Tracker.py  droplet_lib.py
models/: droplet_net.pt
notebooks/: analysis_legacy.ipynb  main_ui.ipynb  training_droplet_net.ipynb
notebooks/.ipynb_checkpoints/: main_ui-checkpoint.ipynb
py_files/: Kinetics_simulation.ipynb
reports_TeX/: first_report_TeX.txt
src/droplet_platform/acquisition/: __init__.py  recording.py
src/droplet_platform/analysis/: __init__.py  io.py  mfe.py  plotting.py
src/droplet_platform/detection/: __init__.py  base.py  correlation_detector.py  enhanced_detector.py  neural_detector.py
src/droplet_platform/measurement/: __init__.py  roi.py  time_series_recorder.py
src/droplet_platform/tracking/: __init__.py
src/droplet_platform/ui/: __init__.py  callbacks.py  preview.py  state.py  widgets.py
src/droplet_platform/utils/: __init__.py  config.py  paths.py  timing.py
(+3 files in other folders)
